--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
         <aside class="aside">
 
             <div class="sidebar-widget">
-                <h2 class="widget-title">ABOUT ME</h2>
+               <a class="aboutme-link" href="about-me.html"> <h2 class="widget-title">ABOUT ME</h2></a>
                 <img src="img/about-me.jpg" alt="" class="widget-image first-sidebar-img"  >
                 <p class="widget-body">I find life better, and I'm happier, when things are nice and simple.</p>
             </div>
 
             <div class="sidebar-widget">
-                <h2 class="widget-title">RECENT POST</h2>
+               <a class="recentpost-link" href="recent-post.html"><h2 class="widget-title">RECENT POST</h2></a> 
                   
             <div class="widget-recent-post">
                 <h3 class="widget-post-title">Keeping cooking simple</h3>
