--- a/recent-post.html
+++ b/recent-post.html
@@ -27,7 +27,7 @@
                 <center>
                     <ul>
     
-                        <li><a href="link.html">HOME</a></li>
+                        <li><a href="index.html">HOME</a></li>
                         <li><a href="about-me.html">ABOUT ME</a></li>
                         <li><a class="current-page" href="recent-post.html" >RECENTS POSTS</a></li>
                         
