--- a/aboutus.html
+++ b/aboutus.html
@@ -4,16 +4,145 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Lora&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="aboutus.css" />
+    <link rel="stylesheet" href="global.css" />
     <title>ABOUT US</title>
   </head>
   <body>
+    <div class="container">
+      <header>
+        <div class="pi-game">
+          <a href="#"> PI GAMES</a>
 
+          <div class="image-cropper">
+            <img
+              src="img/pi-whitepaper.png"
+              alt="pi official logo"
+              class="pi-logo"
+            />
+          </div>
+        </div>
 
-    <header>
-      <div class="pi-game">
-        <a href="#"> PI GAMES</a>
+        <nav>
+          <a href="index.html" class="home">Home </a>
+          <a href="featured.html" class="features">Features</a>
+          <a
+            href="https://pinetwork-official.medium.com/pi-whitepaper-chapters-mainnet-token-model-mining-and-roadmap-19f4a6774e71"
+            target="_blank"
+            class="whitepaper"
+          >
+            Whitepaper</a
+          >
+          <a href="aboutus.html" class="current-page"> About Us</a>
+        </nav>
+      </header>
 
+      <article class="article-one">
+        <h3>MISSION STATEMENT</h3>
+        <p>
+          Traditional Games have been established in the last 30 years.
+          Play-to-earn games has just started not long ago, it has gained
+          exponential growth in terms of the transaction and total active user.
+          It took more than 10 years for cryptocurrency like Bitcoin to become
+          mainstream, but we foresee that gamefi will gain momentum faster than
+          cryptocurrency 1.0. In fact, gamefi brings a whole new community to
+          become a crypto user. Through the fundamentals of gaming, the team
+          creates a good game that is fun to play.
+        </p>
+      </article>
+
+      <article class="article-two">
+        <h3>OUR VISION</h3>
+        <p>
+          To become the world's leading play to end game. Pi-game was
+          conceptualized to become the next leading social creative metaverse, a
+          play-to-earn telegram game in the blockchain industry - a game
+          accessible to everyone, with low entry costs, and provides players,
+          creators, and investors with the ability to generate income based on
+          their creativity and "playformance". We aim to empower the Playermon
+          community creators, players, and investors!
+        </p>
+      </article>
+
+      <section>
+        <div class="grid">
+          <h3 class="meet">MEET THE TEAM</h3>
+          <div class="grid-item">
+            <div class="card">
+              <img class="card-img" src="img/aboutus-ceo.jpg" alt="Rome" />
+              <div class="card-content">
+                <h1 class="card-header">XSPACE</h1>
+                <p class="card-text">
+                  A cryto educator and
+                  <strong class="strong">technical analyst</strong>. also an
+                  highly skilled airdrop hunter
+                </p>
+                <button class="card-btn">
+                  <a
+                    href="https://web.telegram.org/k/#@xspaceq"
+                    target="_blank"
+                  >
+                    Contact <span>&rarr;</span></a
+                  >
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <div class="grid-item">
+            <div class="card">
+              <img
+                class="card-img"
+                src="img/aboutus-ceo.jpg"
+                alt="Grand Canyon"
+              />
+              <div class="card-content">
+                <h1 class="card-header">Joseph bawo</h1>
+                <p class="card-text">
+                  <strong class="strong">web developer</strong> and a marine
+                  enginner. currently on the path to learn web3
+                </p>
+                <button class="card-btn">
+                  <a href="" target="_blank"> Contact <span>&rarr;</span></a>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="card">
+              <img class="card-img" src="img/aboutus-ceo.jpg" alt="Maldives" />
+              <div class="card-content">
+                <h1 class="card-header">FESTUS</h1>
+                <p class="card-text">
+                  He is a well know
+                  <strong class="strong"> moderator</strong> with huge
+                  experience. He's also a advance cryto trader and analyst.
+                </p>
+                <button class="card-btn">
+                  <a
+                    href="https://web.telegram.org/k/#@Festus2519"
+                    target="_blank"
+                    >contact <span>&rarr;</span></a
+                  >
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <p class="wordd">
+        what is pi <a href="https://en.wikipedia.org/wiki/Pi">PI WIKI</a>
+      </p>
+
+      <footer>
         <div class="image-cropper">
           <img
             src="img/pi-whitepaper.png"
@@ -21,28 +150,26 @@
             class="pi-logo"
           />
         </div>
-      </div>
+        <div class="terms">
+          <p><a href="#">Terms of Service</a></p>
+          <p><a href="#">privacy Policy</a></p>
+          <p><a href="#">&copy;2022 PI NETWORK</a></p>
+        </div>
+        <span class="icons-box">
+          <a href="#"
+            ><img
+              src="https://img.icons8.com/ios/50/000000/twitter--v1.png"
+              class="icon"
+            />
+          </a>
 
-      <nav>
-        <a href="index.html">Home </a>
-        <a href="featured.html" ">Features</a>
-        <a href="#"> Whitepaper</a>
-        <a href="aboutus.html" class="current-page"> About Us</a>
-      </nav>
-    </header>
-
-<main>
-
-<div class="about-img">
-  <div class="box"> <img src="img/aboutus-ceo.jpg" alt=""> </div>
-  <div class="box"> <img src="img/aboutus-ceo.jpg" alt="">  </div>
-  <div class="box"><img src="img/aboutus-ceo.jpg" alt=""> </div>
-  <div class="box">  <p>he is an engineer</p> </div>
-  <div class="box">  <p>he is an engineer</p> </div>
-  <div class="box">  <p>he is an engineer</p> </div>
-</div>
-
-</main>
-
+          <a href="#"
+            ><img
+              src="https://img.icons8.com/ios/50/000000/discord-logo--v1.png"
+              class="icon"
+          /></a>
+        </span>
+      </footer>
+    </div>
   </body>
 </html>
