--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="./queries.css" />
     <title>PI-GAMES</title>
 
     <script
@@ -38,31 +39,73 @@
         </div>
 
         <nav>
-          <a href="index.html" class="current-page">Home </a>
-          <a href="featured.html" class="features">Features</a>
-          <a
-            href="https://pinetwork-official.medium.com/pi-whitepaper-chapters-mainnet-token-model-mining-and-roadmap-19f4a6774e71"
-            class="whitepaper"
-          >
-            Whitepaper</a
-          >
-          <a href="aboutus.html" class="about-us"> About Us</a>
+          <div class="nav-items mobileNav">
+            <a href="index.html" class="current-page">Home </a>
+            <a href="featured.html" class="features">Features</a>
+            <a
+              href="https://pinetwork-official.medium.com/pi-whitepaper-chapters-mainnet-token-model-mining-and-roadmap-19f4a6774e71"
+              class="whitepaper"
+            >
+              Whitepaper</a
+            >
+            <a href="aboutus.html" class="about-us"> About Us</a>
+          </div>
+
+          <div class="mobile-nav-icons">
+            <svg
+              class="mobile-nav-icons__open"
+              xmlns="http://www.w3.org/2000/svg"
+              x="0px"
+              y="0px"
+              width="30"
+              height="30"
+              viewBox="0 0 30 30"
+              style="fill: #000000"
+            >
+              <path
+                d="M 3 7 A 1.0001 1.0001 0 1 0 3 9 L 27 9 A 1.0001 1.0001 0 1 0 27 7 L 3 7 z M 3 14 A 1.0001 1.0001 0 1 0 3 16 L 27 16 A 1.0001 1.0001 0 1 0 27 14 L 3 14 z M 3 21 A 1.0001 1.0001 0 1 0 3 23 L 27 23 A 1.0001 1.0001 0 1 0 27 21 L 3 21 z"
+              ></path>
+            </svg>
+            <svg
+              class="mobile-nav-icons__close hidden"
+              xmlns="http://www.w3.org/2000/svg"
+              x="0px"
+              y="0px"
+              width="30"
+              height="30"
+              viewBox="0 0 50 50"
+              style="fill: #0e0a0a"
+            >
+              <path
+                d="M 25 2 C 12.309534 2 2 12.309534 2 25 C 2 37.690466 12.309534 48 25 48 C 37.690466 48 48 37.690466 48 25 C 48 12.309534 37.690466 2 25 2 z M 25 4 C 36.609534 4 46 13.390466 46 25 C 46 36.609534 36.609534 46 25 46 C 13.390466 46 4 36.609534 4 25 C 4 13.390466 13.390466 4 25 4 z M 32.990234 15.986328 A 1.0001 1.0001 0 0 0 32.292969 16.292969 L 25 23.585938 L 17.707031 16.292969 A 1.0001 1.0001 0 0 0 16.990234 15.990234 A 1.0001 1.0001 0 0 0 16.292969 17.707031 L 23.585938 25 L 16.292969 32.292969 A 1.0001 1.0001 0 1 0 17.707031 33.707031 L 25 26.414062 L 32.292969 33.707031 A 1.0001 1.0001 0 1 0 33.707031 32.292969 L 26.414062 25 L 33.707031 17.707031 A 1.0001 1.0001 0 0 0 32.990234 15.986328 z"
+              ></path>
+            </svg>
+          </div>
         </nav>
       </header>
 
-      <main>
-        <h1>PLAY PI GAME AND <br /><span class="get-paid">GET PAID</span></h1>
-        <h4>
-          Upcoming big game on the pi network, yet to launch fully. <br />
-          <span class="early"> you are early! </span>
-        </h4>
+      <main main-space>
+        <div class="hero__content">
+          <h1>PLAY PI GAME AND <br /><span class="get-paid">GET PAID</span></h1>
+          <h4>
+            Upcoming big game on the pi network, yet to launch fully. <br />
+            <span class="early"> you are early! </span>
+          </h4>
 
-        <h3 class="join-us">JOIN US ON</h3>
-        <button class="explore-more">TELEGRAM</button>
+          <h3 class="join-us">JOIN US ON</h3>
+          <a
+            class="explore-link"
+            href="https://t.me/OfficialPiGames"
+            target="_blank"
+          >
+            <button class="explore-more">TELEGRAM</button>
+          </a>
+        </div>
 
         <div class="coin-list">
           <div class="coin coin-btc">
             <img src="img/bitcoin.png" alt="" class="btc-img" />
+
             <div>
               <h3>$<span id="bitcoin"></span></h3>
               <p class="cryto-name">BITCOIN</p>
@@ -87,7 +130,7 @@
         </div>
       </main>
 
-      <footer>
+      <footer class="footer-space">
         <div class="image-cropper">
           <img
             src="img/pi-whitepaper.png"
