--- a/aboutus.html
+++ b/aboutus.html
@@ -14,13 +14,14 @@
 
     <link rel="stylesheet" href="aboutus.css" />
     <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="./queries.css" />
     <title>ABOUT US</title>
   </head>
   <body>
     <div class="container">
       <header>
         <div class="pi-game">
-          <a href="#"> PI GAMES</a>
+          <a href="#"> <p>PI GAMES</p></a>
 
           <div class="image-cropper">
             <img
@@ -32,16 +33,48 @@
         </div>
 
         <nav>
-          <a href="index.html" class="home">Home </a>
-          <a href="featured.html" class="features">Features</a>
-          <a
-            href="https://pinetwork-official.medium.com/pi-whitepaper-chapters-mainnet-token-model-mining-and-roadmap-19f4a6774e71"
-            target="_blank"
-            class="whitepaper"
-          >
-            Whitepaper</a
-          >
-          <a href="aboutus.html" class="current-page"> About Us</a>
+          <div class="nav-items mobileNav">
+            <a href="index.html" class="home">Home </a>
+            <a href="featured.html" class="features">Features</a>
+            <a
+              href="https://pinetwork-official.medium.com/pi-whitepaper-chapters-mainnet-token-model-mining-and-roadmap-19f4a6774e71"
+              class="whitepaper"
+            >
+              Whitepaper</a
+            >
+            <a href="aboutus.html" class="current-page"> About Us</a>
+          </div>
+
+          <div class="mobile-nav-icons">
+            <svg
+              class="mobile-nav-icons__open"
+              xmlns="http://www.w3.org/2000/svg"
+              x="0px"
+              y="0px"
+              width="30"
+              height="30"
+              viewBox="0 0 30 30"
+              style="fill: #000000"
+            >
+              <path
+                d="M 3 7 A 1.0001 1.0001 0 1 0 3 9 L 27 9 A 1.0001 1.0001 0 1 0 27 7 L 3 7 z M 3 14 A 1.0001 1.0001 0 1 0 3 16 L 27 16 A 1.0001 1.0001 0 1 0 27 14 L 3 14 z M 3 21 A 1.0001 1.0001 0 1 0 3 23 L 27 23 A 1.0001 1.0001 0 1 0 27 21 L 3 21 z"
+              ></path>
+            </svg>
+            <svg
+              class="mobile-nav-icons__close hidden"
+              xmlns="http://www.w3.org/2000/svg"
+              x="0px"
+              y="0px"
+              width="30"
+              height="30"
+              viewBox="0 0 50 50"
+              style="fill: #0e0a0a"
+            >
+              <path
+                d="M 25 2 C 12.309534 2 2 12.309534 2 25 C 2 37.690466 12.309534 48 25 48 C 37.690466 48 48 37.690466 48 25 C 48 12.309534 37.690466 2 25 2 z M 25 4 C 36.609534 4 46 13.390466 46 25 C 46 36.609534 36.609534 46 25 46 C 13.390466 46 4 36.609534 4 25 C 4 13.390466 13.390466 4 25 4 z M 32.990234 15.986328 A 1.0001 1.0001 0 0 0 32.292969 16.292969 L 25 23.585938 L 17.707031 16.292969 A 1.0001 1.0001 0 0 0 16.990234 15.990234 A 1.0001 1.0001 0 0 0 16.292969 17.707031 L 23.585938 25 L 16.292969 32.292969 A 1.0001 1.0001 0 1 0 17.707031 33.707031 L 25 26.414062 L 32.292969 33.707031 A 1.0001 1.0001 0 1 0 33.707031 32.292969 L 26.414062 25 L 33.707031 17.707031 A 1.0001 1.0001 0 0 0 32.990234 15.986328 z"
+              ></path>
+            </svg>
+          </div>
         </nav>
       </header>
 
@@ -99,19 +132,19 @@
 
           <div class="grid-item">
             <div class="card">
-              <img
-                class="card-img"
-                src="img/aboutus-ceo.jpg"
-                alt="Grand Canyon"
-              />
+              <img class="card-img" src="img/bawo.jpg" alt="Grand Canyon" />
               <div class="card-content">
                 <h1 class="card-header">Joseph bawo</h1>
                 <p class="card-text">
                   <strong class="strong">web developer</strong> and a marine
-                  enginner. currently on the path to learn web3
+                  enginner. <br />
+                  currently on the path to learn web3
                 </p>
+
                 <button class="card-btn">
-                  <a href="" target="_blank"> Contact <span>&rarr;</span></a>
+                  <a href="https://twitter.com/josephbawo2" target="_blank">
+                    Contact <span>&rarr;</span></a
+                  >
                 </button>
               </div>
             </div>
@@ -124,7 +157,7 @@
                 <p class="card-text">
                   He is a well know
                   <strong class="strong"> moderator</strong> with huge
-                  experience. He's also a advance cryto trader and analyst.
+                  experience. a cryto trader and analyst.
                 </p>
                 <button class="card-btn">
                   <a
@@ -168,5 +201,24 @@
         </span>
       </footer>
     </div>
+
+    <script>
+      const openNav = document.querySelector(".mobile-nav-icons__open");
+      const closeNav = document.querySelector(".mobile-nav-icons__close");
+      const mobileNavBar = document.querySelector(".mobileNav");
+
+      openNav.addEventListener("click", function () {
+        mobileNavBar.classList.add("showNav");
+        openNav.classList.toggle("hidden");
+        closeNav.classList.toggle("hidden");
+        console.log("opened nav");
+      });
+
+      closeNav.addEventListener("click", function () {
+        mobileNavBar.classList.remove("showNav");
+        closeNav.classList.toggle("hidden");
+        openNav.classList.toggle("hidden");
+      });
+    </script>
   </body>
 </html>
